--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Iniciar Sesión</h2>
+    <h2>Bienvenido</h2>
     <form>
       <div class="form-group">
         <label for="usuario">Usuario</label>
@@ -18,7 +18,10 @@
         <label for="clave">Contraseña</label>
         <input type="password" id="clave" name="clave" required>
       </div>
-      <button type="submit" class="btn-login">Entrar</button>
+      <div class="button-group">
+        <button type="submit" class="btn-login">Entrar</button>
+        <button type="button" class="btn-register">Registrarse</button>
+      </div>
     </form>
     <div class="footer-text">
       ¿Olvidaste tu contraseña?
