--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login Glass UI</title>
+  <title>Iniciar Sesión</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="login-container">
-    <h2>Bienvenido</h2>
+    <h2>Iniciar Sesión</h2>
     <form>
       <div class="form-group">
         <label for="usuario">Usuario</label>
@@ -20,11 +20,11 @@
       </div>
       <div class="button-group">
         <button type="submit" class="btn-login">Entrar</button>
-        <button type="button" class="btn-register">Registrarse</button>
+        <a href="registro.html" class="btn-register">Registrarse</a>
       </div>
     </form>
     <div class="footer-text">
-      ¿Olvidaste tu contraseña?
+      <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
     </div>
   </div>
 </body>
